# flame

./: .gitignore  benchmark_parallel_ops.py  download_dataset.py  eval_ppl_by_position.py  eval_ruler.py  plot_ppl_by_position.py  pyproject.toml  srun_sub_eval_ppl_all.sh  srun_sub_eval_ruler_all.sh  summarize_ruler.py  train.sh  vis_feature.py
configs/: 760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_design1.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_design2.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_ga_dot_product.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_mse.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_no_query_dot_product.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_no_query_dot_product_fix.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_momentum_no_norm.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_momentum_one.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_no_momentum.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_no_wn.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_no_wn_parallel.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_straight_qk.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_straight_qk_no_lr1.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_straight_qk_no_lr1_no_momen.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_straight_qk_no_lr1_no_muon.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_straight_qk_no_lr1_no_wn.json  760M_lact_swiglu_nh4_fwlow_rank_momentum_muon_only_w1_straight_qk_no_lr1_no_wn_momen.json  (+11 more)
(+99 files in other folders)
